added imu, rf circuitry📡😹
💃

--- a/wearable_v1_sw/wearable_v1_sw.ioc
+++ b/wearable_v1_sw/wearable_v1_sw.ioc
@@ -58,18 +58,21 @@ Mcu.IPNb=9
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PA1
-Mcu.Pin1=PA6
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin11=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin2=PA7
-Mcu.Pin3=RF1
-Mcu.Pin4=OSC_OUT
-Mcu.Pin5=OSC_IN
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=12
+Mcu.Pin1=PA4
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin14=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin2=PA6
+Mcu.Pin3=PA7
+Mcu.Pin4=RF1
+Mcu.Pin5=OSC_OUT
+Mcu.Pin6=OSC_IN
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -100,6 +103,12 @@ PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
 PA12.Signal=USB_DP
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA4.Mode=NSS_Signal_Hard_Output
+PA4.Signal=SPI1_NSS
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
@@ -136,8 +145,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=wearable_v1.ioc
-ProjectManager.ProjectName=wearable_v1
+ProjectManager.ProjectFileName=wearable_v1_sw.ioc
+ProjectManager.ProjectName=wearable_v1_sw
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -203,8 +212,9 @@ RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
 SPI1.CalculateBaudRate=32.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
@@ -219,3 +229,4 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
+rtos.0.ip=FREERTOS
