💃added d-,d+ protection, swd, todo statements
💃

--- a/wearable_v1_sw/wearable_v1_sw.ioc
+++ b/wearable_v1_sw/wearable_v1_sw.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -6,6 +14,10 @@ FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=
+I2C1.IPParameters=Timing
+I2C1.Timing=0x10B17DB5
+I2C3.IPParameters=Timing
+I2C3.Timing=0x10B17DB5
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=RAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M4NS
@@ -45,34 +57,43 @@ MMTAppRegionsCount=4
 MMTConfigApplied=false
 Mcu.CPN=STM32WB55RGV6
 Mcu.Family=STM32WB
-Mcu.IP0=FREERTOS
-Mcu.IP1=MEMORYMAP
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RF
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USB
-Mcu.IP8=USB_DEVICE
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=FREERTOS
+Mcu.IP10=USB
+Mcu.IP11=USB_DEVICE
+Mcu.IP2=I2C1
+Mcu.IP3=I2C3
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RF
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
-Mcu.Pin0=PA1
-Mcu.Pin1=PA4
-Mcu.Pin10=PA14
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin14=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=RF1
-Mcu.Pin5=OSC_OUT
-Mcu.Pin6=OSC_IN
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin0=PB8
+Mcu.Pin1=PB9
+Mcu.Pin10=OSC_OUT
+Mcu.Pin11=OSC_IN
+Mcu.Pin12=PB0
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PC0
+Mcu.Pin20=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA4
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=RF1
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -113,6 +134,17 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB10.Mode=I2C
+PB10.Signal=I2C3_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C3_SDA
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC0.Signal=ADCx_IN1
 PCC.Ble.ConnectionInterval=1000.0
 PCC.Ble.DataLength=6
 PCC.Ble.IsUsed=false
@@ -210,6 +242,8 @@ RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
+SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
+SH.ADCx_IN1.ConfNb=1
 SPI1.CalculateBaudRate=32.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
