add haptic feedback

--- a/wearable_v1_sw/wearable_v1_sw.ioc
+++ b/wearable_v1_sw/wearable_v1_sw.ioc
@@ -59,8 +59,9 @@ Mcu.CPN=STM32WB55RGV6
 Mcu.Family=STM32WB
 Mcu.IP0=ADC1
 Mcu.IP1=FREERTOS
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
+Mcu.IP10=SYS
+Mcu.IP11=USB
+Mcu.IP12=USB_DEVICE
 Mcu.IP2=I2C1
 Mcu.IP3=I2C3
 Mcu.IP4=MEMORYMAP
@@ -68,32 +69,36 @@ Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=RF
 Mcu.IP8=SPI1
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP9=SPI2
+Mcu.IPNb=13
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PB8
 Mcu.Pin1=PB9
-Mcu.Pin10=OSC_OUT
-Mcu.Pin11=OSC_IN
-Mcu.Pin12=PB0
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=RF1
+Mcu.Pin13=OSC_OUT
+Mcu.Pin14=OSC_IN
+Mcu.Pin15=PB0
+Mcu.Pin16=PB12
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin3=PA1
-Mcu.Pin4=PA4
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB10
-Mcu.Pin8=PB11
-Mcu.Pin9=RF1
-Mcu.PinsNb=21
+Mcu.Pin20=PA14
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin24=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin3=PC1
+Mcu.Pin4=PC2
+Mcu.Pin5=PA1
+Mcu.Pin6=PA4
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PA9
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
@@ -134,17 +139,25 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Full_Duplex_Master
+PA9.Signal=SPI2_SCK
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB10.Mode=I2C
 PB10.Signal=I2C3_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C3_SDA
+PB12.Mode=NSS_Signal_Hard_Output
+PB12.Signal=SPI2_NSS
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.Signal=ADCx_IN1
+PC1.Mode=Full_Duplex_Master
+PC1.Signal=SPI2_MOSI
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
 PCC.Ble.ConnectionInterval=1000.0
 PCC.Ble.DataLength=6
 PCC.Ble.IsUsed=false
@@ -187,7 +200,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,0-MX_RF_Init-RF-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,0-MX_RF_Init-RF-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHB2CLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=64000000
@@ -250,6 +263,12 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=32.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_MASTER
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
