--- a/wearable_v1_sw/wearable_v1_sw.ioc
+++ b/wearable_v1_sw/wearable_v1_sw.ioc
@@ -10,14 +10,12 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=
 I2C1.IPParameters=Timing
-I2C1.Timing=0x10B17DB5
+I2C1.Timing=0x00B07CB4
 I2C3.IPParameters=Timing
-I2C3.Timing=0x10B17DB5
+I2C3.Timing=0x00B07CB4
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=RAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M4NS
@@ -58,67 +56,83 @@ MMTConfigApplied=false
 Mcu.CPN=STM32WB55RGV6
 Mcu.Family=STM32WB
 Mcu.IP0=ADC1
-Mcu.IP1=FREERTOS
-Mcu.IP10=SYS
-Mcu.IP11=USB
-Mcu.IP12=USB_DEVICE
+Mcu.IP1=HSEM
+Mcu.IP10=SEQUENCER
+Mcu.IP11=SPI1
+Mcu.IP12=SPI2
+Mcu.IP13=STM32_WPAN
+Mcu.IP14=SYS
+Mcu.IP15=TINY_LPM
+Mcu.IP16=USB
+Mcu.IP17=USB_DEVICE
 Mcu.IP2=I2C1
 Mcu.IP3=I2C3
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RF
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=13
+Mcu.IP4=IPCC
+Mcu.IP5=MEMORYMAP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RF
+Mcu.IP9=RTC
+Mcu.IPNb=18
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
-Mcu.Pin0=PB8
-Mcu.Pin1=PB9
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=RF1
-Mcu.Pin13=OSC_OUT
-Mcu.Pin14=OSC_IN
-Mcu.Pin15=PB0
-Mcu.Pin16=PB12
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
-Mcu.Pin2=PC0
-Mcu.Pin20=PA14
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin24=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin3=PC1
-Mcu.Pin4=PC2
-Mcu.Pin5=PA1
-Mcu.Pin6=PA4
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PA9
-Mcu.PinsNb=25
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PA9
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=RF1
+Mcu.Pin16=OSC_OUT
+Mcu.Pin17=OSC_IN
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
+Mcu.Pin2=PB8
+Mcu.Pin20=PB12
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=VP_HSEM_VS_HSEM
+Mcu.Pin26=VP_IPCC_VS_IPCC
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin29=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin3=PB9
+Mcu.Pin30=VP_STM32_WPAN_VS_BLE_HOST
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin34=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PA1
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WB55RGVx
 MxCube.Version=6.12.1
 MxDb.Version=DB.6.0.121
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
+NVIC.HSEM_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.IPCC_C1_RX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.IPCC_C1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
-NVIC.USB_LP_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.RTC_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
@@ -135,6 +149,8 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.Mode=NSS_Signal_Hard_Output
 PA4.Signal=SPI1_NSS
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
@@ -143,6 +159,8 @@ PA9.Mode=Full_Duplex_Master
 PA9.Signal=SPI2_SCK
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=I2C
 PB10.Signal=I2C3_SCL
 PB11.Mode=I2C
@@ -156,6 +174,10 @@ PB9.Signal=I2C1_SDA
 PC0.Signal=ADCx_IN1
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PCC.Ble.ConnectionInterval=1000.0
@@ -174,7 +196,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -182,7 +204,7 @@ ProjectManager.DeviceId=STM32WB55RGVx
 ProjectManager.FirmwarePackage=STM32Cube FW_WB V1.20.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -194,44 +216,42 @@ ProjectManager.ProjectFileName=wearable_v1_sw.ioc
 ProjectManager.ProjectName=wearable_v1_sw
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,0-MX_RF_Init-RF-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_IPCC_Init-IPCC-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-APPE_Init-STM32_WPAN-false-HAL-false,0-MX_RF_Init-RF-false-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true
 RCC.ADCFreq_Value=48000000
-RCC.AHB2CLKDivider=RCC_SYSCLK_DIV2
-RCC.AHBFreq_Value=64000000
-RCC.APB1Freq_Value=64000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
 RCC.APB3Freq_Value=16000000
-RCC.Cortex2Freq_Value=4000000
-RCC.Cortex2_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
-RCC.CortexFreq_Value=64000000
+RCC.Cortex2Freq_Value=32000000
+RCC.CortexFreq_Value=32000000
 RCC.FCLK2Freq_Value=32000000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
 RCC.HCLK2Freq_Value=32000000
-RCC.HCLK3Freq_Value=64000000
-RCC.HCLKFreq_Value=64000000
+RCC.HCLK3Freq_Value=32000000
+RCC.HCLKFreq_Value=32000000
 RCC.HCLKRFFreq_Value=16000000
 RCC.HSE_VALUE=32000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=64000000
-RCC.I2C3Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB2CLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,Cortex2Freq_Value,Cortex2_Div,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RFWKPFreq_Value,RNGFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=64000000
-RCC.LPTIM2Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,Cortex2Freq_Value,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RFWKPClockSelection,RFWKPFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSCLockSelection,SMPSDivider,SMPSFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LCDFreq_Value=32768
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=64000000
+RCC.MCO1PinFreq_Value=32000000
 RCC.PLLN=32
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
@@ -240,15 +260,20 @@ RCC.PLLSAI1N=24
 RCC.PLLSAI1PoutputFreq_Value=48000000
 RCC.PLLSAI1QoutputFreq_Value=48000000
 RCC.PLLSAI1RoutputFreq_Value=48000000
-RCC.PWRFreq_Value=64000000
-RCC.RFWKPFreq_Value=31250
+RCC.PWRFreq_Value=32000000
+RCC.RFWKPClockSelection=RCC_RFWKPCLKSOURCE_LSE
+RCC.RFWKPFreq_Value=32768
 RCC.RNGFreq_Value=32000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SAI1Freq_Value=48000000
 RCC.SMPS1Freq_Value=8000000
+RCC.SMPSCLockSelection=RCC_SMPSCLKSOURCE_HSE
+RCC.SMPSDivider=4
 RCC.SMPSFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=64000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USART1Freq_Value=64000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
+RCC.USART1Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
@@ -257,29 +282,47 @@ RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
 SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
 SH.ADCx_IN1.ConfNb=1
-SPI1.CalculateBaudRate=32.0 MBits/s
+SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=32.0 MBits/s
+SPI2.CalculateBaudRate=16.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
+STM32_WPAN.CFG_GAP_DEVICE_NAME=MY_APPLI
+STM32_WPAN.CFG_LSCLK_LSE=0
+STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
+STM32_WPAN.CUSTOM_TEMPLATE=Enabled
+STM32_WPAN.INCLUDE_AD_TYPE_LE_ROLE=1
+STM32_WPAN.INCLUDE_AD_TYPE_TX_POWER_LEVEL=1
+STM32_WPAN.IPParameters=CFG_LSCLK_LSE,CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,CFG_GAP_DEVICE_NAME,INCLUDE_AD_TYPE_TX_POWER_LEVEL,INCLUDE_AD_TYPE_LE_ROLE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_HSEM_VS_HSEM.Mode=HSEM_Activate
+VP_HSEM_VS_HSEM.Signal=HSEM_VS_HSEM
+VP_IPCC_VS_IPCC.Mode=IPCC_Activate
+VP_IPCC_VS_IPCC.Signal=IPCC_VS_IPCC
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
+VP_SEQUENCER_VS_SEQUENCER.Mode=SEQUENCER_Enabled
+VP_SEQUENCER_VS_SEQUENCER.Signal=SEQUENCER_VS_SEQUENCER
+VP_STM32_WPAN_VS_BLE_HOST.Mode=STM32_WPAN_Enabled
+VP_STM32_WPAN_VS_BLE_HOST.Signal=STM32_WPAN_VS_BLE_HOST
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TINY_LPM_VS_TINY_LPM.Mode=TINY_LPM_Enabled
+VP_TINY_LPM_VS_TINY_LPM.Signal=TINY_LPM_VS_TINY_LPM
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
-rtos.0.ip=FREERTOS
