--- a/wearable_v1_sw/wearable_v1_sw.ioc
+++ b/wearable_v1_sw/wearable_v1_sw.ioc
@@ -59,12 +59,11 @@ Mcu.IP0=ADC1
 Mcu.IP1=HSEM
 Mcu.IP10=SEQUENCER
 Mcu.IP11=SPI1
-Mcu.IP12=SPI2
-Mcu.IP13=STM32_WPAN
-Mcu.IP14=SYS
-Mcu.IP15=TINY_LPM
-Mcu.IP16=USB
-Mcu.IP17=USB_DEVICE
+Mcu.IP12=STM32_WPAN
+Mcu.IP13=SYS
+Mcu.IP14=TINY_LPM
+Mcu.IP15=USB
+Mcu.IP16=USB_DEVICE
 Mcu.IP2=I2C1
 Mcu.IP3=I2C3
 Mcu.IP4=IPCC
@@ -73,14 +72,14 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=RF
 Mcu.IP9=RTC
-Mcu.IPNb=18
+Mcu.IPNb=17
 Mcu.Name=STM32WB55RGVx
 Mcu.Package=VFQFPN68
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PA9
+Mcu.Pin10=PA7
+Mcu.Pin11=PA8
+Mcu.Pin12=PB2
 Mcu.Pin13=PB10
 Mcu.Pin14=PB11
 Mcu.Pin15=RF1
@@ -89,7 +88,7 @@ Mcu.Pin17=OSC_IN
 Mcu.Pin18=PB0
 Mcu.Pin19=PB1
 Mcu.Pin2=PB8
-Mcu.Pin20=PB12
+Mcu.Pin20=PB13
 Mcu.Pin21=PA11
 Mcu.Pin22=PA12
 Mcu.Pin23=PA13
@@ -109,8 +108,8 @@ Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PA1
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
 Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -147,16 +146,14 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Mode=NSS_Signal_Hard_Output
-PA4.Signal=SPI1_NSS
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA9.Mode=Full_Duplex_Master
-PA9.Signal=SPI2_SCK
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
@@ -165,21 +162,23 @@ PB10.Mode=I2C
 PB10.Signal=I2C3_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C3_SDA
-PB12.Mode=NSS_Signal_Hard_Output
-PB12.Signal=SPI2_NSS
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB2.Mode=NSS_Signal_Hard_Output
+PB2.Signal=SPI1_NSS
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.Signal=ADCx_IN1
-PC1.Mode=Full_Duplex_Master
-PC1.Signal=SPI2_MOSI
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
+PC2.Locked=true
+PC2.Signal=GPIO_Input
 PCC.Ble.ConnectionInterval=1000.0
 PCC.Ble.DataLength=6
 PCC.Ble.IsUsed=false
@@ -288,12 +287,6 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=16.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualNSS=VM_NSSHARD
-SPI2.VirtualType=VM_MASTER
 STM32_WPAN.CFG_GAP_DEVICE_NAME=MY_APPLI
 STM32_WPAN.CFG_LSCLK_LSE=0
 STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
